fix menu height on mobile

--- a/src/styles/scss/base/_breakpoints.scss
+++ b/src/styles/scss/base/_breakpoints.scss
@@ -1,11 +1,10 @@
 @media only screen and (max-width: 900px) {
   body {
     overflow-x: hidden;
+    .main {
+      margin: 0;
+    }
     .header {
-      position: fixed;
-      z-index: 1;
-      top: 0;
-      left: 0;
       padding: 0;
       width: 100%;
     }
