--- a/src/styles/scss/components/_about.scss
+++ b/src/styles/scss/components/_about.scss
@@ -1,4 +1,7 @@
 .about {
   text-shadow: 0 0 10px black;
   pointer-events: auto;
+  h2 {
+    margin-bottom: $small-spacing;
+  }
 }
